[package]
name = "discordbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
rand = "0.8.5"
regex = "1.8.1"
reqwest = "0.11.17"
serde = "1.0.162"
serenity = "0.11.5"
tokio = { version = "1.28.0", features = ["rt", "macros"] }
